// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Error rate when data is loaded returns the transaction error rate has the correct error rate 1`] = `
Array [
  Object {
    "x": 1607435850000,
    "y": null,
  },
  Object {
    "x": 1607435880000,
    "y": 0,
  },
  Object {
    "x": 1607435910000,
    "y": null,
  },
  Object {
    "x": 1607435940000,
    "y": 0,
  },
  Object {
    "x": 1607435970000,
    "y": null,
  },
  Object {
    "x": 1607436000000,
    "y": 0,
  },
  Object {
    "x": 1607436030000,
    "y": 0,
  },
  Object {
    "x": 1607436060000,
    "y": null,
  },
  Object {
    "x": 1607436090000,
    "y": null,
  },
  Object {
    "x": 1607436120000,
    "y": 0,
  },
  Object {
    "x": 1607436150000,
    "y": null,
  },
  Object {
    "x": 1607436180000,
    "y": null,
  },
  Object {
    "x": 1607436210000,
    "y": null,
  },
  Object {
    "x": 1607436240000,
    "y": 0,
  },
  Object {
    "x": 1607436270000,
    "y": null,
  },
  Object {
    "x": 1607436300000,
    "y": null,
  },
  Object {
    "x": 1607436330000,
    "y": 1,
  },
  Object {
    "x": 1607436360000,
    "y": 0,
  },
  Object {
    "x": 1607436390000,
    "y": 0,
  },
  Object {
    "x": 1607436420000,
    "y": null,
  },
  Object {
    "x": 1607436450000,
    "y": null,
  },
  Object {
    "x": 1607436480000,
    "y": 0,
  },
  Object {
    "x": 1607436510000,
    "y": 0.2,
  },
  Object {
    "x": 1607436540000,
    "y": null,
  },
  Object {
    "x": 1607436570000,
    "y": null,
  },
  Object {
    "x": 1607436600000,
    "y": 0.5,
  },
  Object {
    "x": 1607436630000,
    "y": 0.142857142857143,
  },
  Object {
    "x": 1607436660000,
    "y": null,
  },
  Object {
    "x": 1607436690000,
    "y": null,
  },
  Object {
    "x": 1607436720000,
    "y": null,
  },
  Object {
    "x": 1607436750000,
    "y": 0.5,
  },
  Object {
    "x": 1607436780000,
    "y": null,
  },
  Object {
    "x": 1607436810000,
    "y": 0,
  },
  Object {
    "x": 1607436840000,
    "y": 1,
  },
  Object {
    "x": 1607436870000,
    "y": 0,
  },
  Object {
    "x": 1607436900000,
    "y": null,
  },
  Object {
    "x": 1607436930000,
    "y": null,
  },
  Object {
    "x": 1607436960000,
    "y": 0,
  },
  Object {
    "x": 1607436990000,
    "y": 0,
  },
  Object {
    "x": 1607437020000,
    "y": null,
  },
  Object {
    "x": 1607437050000,
    "y": null,
  },
  Object {
    "x": 1607437080000,
    "y": 0,
  },
  Object {
    "x": 1607437110000,
    "y": 0,
  },
  Object {
    "x": 1607437140000,
    "y": null,
  },
  Object {
    "x": 1607437170000,
    "y": null,
  },
  Object {
    "x": 1607437200000,
    "y": 0,
  },
  Object {
    "x": 1607437230000,
    "y": 0.428571428571429,
  },
  Object {
    "x": 1607437260000,
    "y": 0,
  },
  Object {
    "x": 1607437290000,
    "y": null,
  },
  Object {
    "x": 1607437320000,
    "y": 0,
  },
  Object {
    "x": 1607437350000,
    "y": 0.5,
  },
  Object {
    "x": 1607437380000,
    "y": null,
  },
  Object {
    "x": 1607437410000,
    "y": null,
  },
  Object {
    "x": 1607437440000,
    "y": 1,
  },
  Object {
    "x": 1607437470000,
    "y": 0.333333333333333,
  },
  Object {
    "x": 1607437500000,
    "y": null,
  },
  Object {
    "x": 1607437530000,
    "y": null,
  },
  Object {
    "x": 1607437560000,
    "y": 0,
  },
  Object {
    "x": 1607437590000,
    "y": null,
  },
  Object {
    "x": 1607437620000,
    "y": null,
  },
  Object {
    "x": 1607437650000,
    "y": null,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Error rate when data is loaded returns the transaction error rate with comparison data has the correct error rate 1`] = `
Array [
  Object {
    "x": 1607436770000,
    "y": null,
  },
  Object {
    "x": 1607436780000,
    "y": null,
  },
  Object {
    "x": 1607436790000,
    "y": null,
  },
  Object {
    "x": 1607436800000,
    "y": null,
  },
  Object {
    "x": 1607436810000,
    "y": null,
  },
  Object {
    "x": 1607436820000,
    "y": 0,
  },
  Object {
    "x": 1607436830000,
    "y": null,
  },
  Object {
    "x": 1607436840000,
    "y": null,
  },
  Object {
    "x": 1607436850000,
    "y": null,
  },
  Object {
    "x": 1607436860000,
    "y": 1,
  },
  Object {
    "x": 1607436870000,
    "y": 0,
  },
  Object {
    "x": 1607436880000,
    "y": 0,
  },
  Object {
    "x": 1607436890000,
    "y": null,
  },
  Object {
    "x": 1607436900000,
    "y": null,
  },
  Object {
    "x": 1607436910000,
    "y": null,
  },
  Object {
    "x": 1607436920000,
    "y": null,
  },
  Object {
    "x": 1607436930000,
    "y": null,
  },
  Object {
    "x": 1607436940000,
    "y": null,
  },
  Object {
    "x": 1607436950000,
    "y": null,
  },
  Object {
    "x": 1607436960000,
    "y": null,
  },
  Object {
    "x": 1607436970000,
    "y": null,
  },
  Object {
    "x": 1607436980000,
    "y": 0,
  },
  Object {
    "x": 1607436990000,
    "y": 0,
  },
  Object {
    "x": 1607437000000,
    "y": 0,
  },
  Object {
    "x": 1607437010000,
    "y": null,
  },
  Object {
    "x": 1607437020000,
    "y": null,
  },
  Object {
    "x": 1607437030000,
    "y": null,
  },
  Object {
    "x": 1607437040000,
    "y": null,
  },
  Object {
    "x": 1607437050000,
    "y": null,
  },
  Object {
    "x": 1607437060000,
    "y": null,
  },
  Object {
    "x": 1607437070000,
    "y": null,
  },
  Object {
    "x": 1607437080000,
    "y": null,
  },
  Object {
    "x": 1607437090000,
    "y": null,
  },
  Object {
    "x": 1607437100000,
    "y": 0,
  },
  Object {
    "x": 1607437110000,
    "y": 0,
  },
  Object {
    "x": 1607437120000,
    "y": null,
  },
  Object {
    "x": 1607437130000,
    "y": null,
  },
  Object {
    "x": 1607437140000,
    "y": null,
  },
  Object {
    "x": 1607437150000,
    "y": null,
  },
  Object {
    "x": 1607437160000,
    "y": null,
  },
  Object {
    "x": 1607437170000,
    "y": null,
  },
  Object {
    "x": 1607437180000,
    "y": null,
  },
  Object {
    "x": 1607437190000,
    "y": null,
  },
  Object {
    "x": 1607437200000,
    "y": null,
  },
  Object {
    "x": 1607437210000,
    "y": null,
  },
  Object {
    "x": 1607437220000,
    "y": 0,
  },
  Object {
    "x": 1607437230000,
    "y": 0.6,
  },
  Object {
    "x": 1607437240000,
    "y": 0,
  },
  Object {
    "x": 1607437250000,
    "y": null,
  },
  Object {
    "x": 1607437260000,
    "y": null,
  },
  Object {
    "x": 1607437270000,
    "y": 0,
  },
  Object {
    "x": 1607437280000,
    "y": null,
  },
  Object {
    "x": 1607437290000,
    "y": null,
  },
  Object {
    "x": 1607437300000,
    "y": null,
  },
  Object {
    "x": 1607437310000,
    "y": null,
  },
  Object {
    "x": 1607437320000,
    "y": null,
  },
  Object {
    "x": 1607437330000,
    "y": null,
  },
  Object {
    "x": 1607437340000,
    "y": 0,
  },
  Object {
    "x": 1607437350000,
    "y": null,
  },
  Object {
    "x": 1607437360000,
    "y": 0.5,
  },
  Object {
    "x": 1607437370000,
    "y": null,
  },
  Object {
    "x": 1607437380000,
    "y": null,
  },
  Object {
    "x": 1607437390000,
    "y": null,
  },
  Object {
    "x": 1607437400000,
    "y": null,
  },
  Object {
    "x": 1607437410000,
    "y": null,
  },
  Object {
    "x": 1607437420000,
    "y": null,
  },
  Object {
    "x": 1607437430000,
    "y": null,
  },
  Object {
    "x": 1607437440000,
    "y": null,
  },
  Object {
    "x": 1607437450000,
    "y": null,
  },
  Object {
    "x": 1607437460000,
    "y": 1,
  },
  Object {
    "x": 1607437470000,
    "y": 0,
  },
  Object {
    "x": 1607437480000,
    "y": 1,
  },
  Object {
    "x": 1607437490000,
    "y": null,
  },
  Object {
    "x": 1607437500000,
    "y": null,
  },
  Object {
    "x": 1607437510000,
    "y": null,
  },
  Object {
    "x": 1607437520000,
    "y": null,
  },
  Object {
    "x": 1607437530000,
    "y": null,
  },
  Object {
    "x": 1607437540000,
    "y": null,
  },
  Object {
    "x": 1607437550000,
    "y": null,
  },
  Object {
    "x": 1607437560000,
    "y": null,
  },
  Object {
    "x": 1607437570000,
    "y": 0,
  },
  Object {
    "x": 1607437580000,
    "y": null,
  },
  Object {
    "x": 1607437590000,
    "y": null,
  },
  Object {
    "x": 1607437600000,
    "y": null,
  },
  Object {
    "x": 1607437610000,
    "y": null,
  },
  Object {
    "x": 1607437620000,
    "y": null,
  },
  Object {
    "x": 1607437630000,
    "y": null,
  },
  Object {
    "x": 1607437640000,
    "y": null,
  },
  Object {
    "x": 1607437650000,
    "y": null,
  },
  Object {
    "x": 1607437660000,
    "y": null,
  },
  Object {
    "x": 1607437670000,
    "y": null,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Error rate when data is loaded returns the transaction error rate with comparison data has the correct error rate 2`] = `
Array [
  Object {
    "x": 1607436770000,
    "y": null,
  },
  Object {
    "x": 1607436780000,
    "y": null,
  },
  Object {
    "x": 1607436790000,
    "y": null,
  },
  Object {
    "x": 1607436800000,
    "y": 0,
  },
  Object {
    "x": 1607436810000,
    "y": null,
  },
  Object {
    "x": 1607436820000,
    "y": null,
  },
  Object {
    "x": 1607436830000,
    "y": null,
  },
  Object {
    "x": 1607436840000,
    "y": 0,
  },
  Object {
    "x": 1607436850000,
    "y": null,
  },
  Object {
    "x": 1607436860000,
    "y": null,
  },
  Object {
    "x": 1607436870000,
    "y": null,
  },
  Object {
    "x": 1607436880000,
    "y": null,
  },
  Object {
    "x": 1607436890000,
    "y": null,
  },
  Object {
    "x": 1607436900000,
    "y": null,
  },
  Object {
    "x": 1607436910000,
    "y": 0,
  },
  Object {
    "x": 1607436920000,
    "y": 0,
  },
  Object {
    "x": 1607436930000,
    "y": 0,
  },
  Object {
    "x": 1607436940000,
    "y": null,
  },
  Object {
    "x": 1607436950000,
    "y": null,
  },
  Object {
    "x": 1607436960000,
    "y": null,
  },
  Object {
    "x": 1607436970000,
    "y": null,
  },
  Object {
    "x": 1607436980000,
    "y": null,
  },
  Object {
    "x": 1607436990000,
    "y": null,
  },
  Object {
    "x": 1607437000000,
    "y": null,
  },
  Object {
    "x": 1607437010000,
    "y": null,
  },
  Object {
    "x": 1607437020000,
    "y": null,
  },
  Object {
    "x": 1607437030000,
    "y": 0,
  },
  Object {
    "x": 1607437040000,
    "y": 0,
  },
  Object {
    "x": 1607437050000,
    "y": null,
  },
  Object {
    "x": 1607437060000,
    "y": null,
  },
  Object {
    "x": 1607437070000,
    "y": null,
  },
  Object {
    "x": 1607437080000,
    "y": null,
  },
  Object {
    "x": 1607437090000,
    "y": null,
  },
  Object {
    "x": 1607437100000,
    "y": null,
  },
  Object {
    "x": 1607437110000,
    "y": null,
  },
  Object {
    "x": 1607437120000,
    "y": null,
  },
  Object {
    "x": 1607437130000,
    "y": null,
  },
  Object {
    "x": 1607437140000,
    "y": null,
  },
  Object {
    "x": 1607437150000,
    "y": null,
  },
  Object {
    "x": 1607437160000,
    "y": 0,
  },
  Object {
    "x": 1607437170000,
    "y": null,
  },
  Object {
    "x": 1607437180000,
    "y": null,
  },
  Object {
    "x": 1607437190000,
    "y": null,
  },
  Object {
    "x": 1607437200000,
    "y": null,
  },
  Object {
    "x": 1607437210000,
    "y": null,
  },
  Object {
    "x": 1607437220000,
    "y": null,
  },
  Object {
    "x": 1607437230000,
    "y": null,
  },
  Object {
    "x": 1607437240000,
    "y": 1,
  },
  Object {
    "x": 1607437250000,
    "y": null,
  },
  Object {
    "x": 1607437260000,
    "y": null,
  },
  Object {
    "x": 1607437270000,
    "y": null,
  },
  Object {
    "x": 1607437280000,
    "y": 0,
  },
  Object {
    "x": 1607437290000,
    "y": 0,
  },
  Object {
    "x": 1607437300000,
    "y": null,
  },
  Object {
    "x": 1607437310000,
    "y": null,
  },
  Object {
    "x": 1607437320000,
    "y": null,
  },
  Object {
    "x": 1607437330000,
    "y": null,
  },
  Object {
    "x": 1607437340000,
    "y": null,
  },
  Object {
    "x": 1607437350000,
    "y": null,
  },
  Object {
    "x": 1607437360000,
    "y": null,
  },
  Object {
    "x": 1607437370000,
    "y": null,
  },
  Object {
    "x": 1607437380000,
    "y": null,
  },
  Object {
    "x": 1607437390000,
    "y": null,
  },
  Object {
    "x": 1607437400000,
    "y": 0,
  },
  Object {
    "x": 1607437410000,
    "y": 0,
  },
  Object {
    "x": 1607437420000,
    "y": 0.25,
  },
  Object {
    "x": 1607437430000,
    "y": null,
  },
  Object {
    "x": 1607437440000,
    "y": null,
  },
  Object {
    "x": 1607437450000,
    "y": null,
  },
  Object {
    "x": 1607437460000,
    "y": null,
  },
  Object {
    "x": 1607437470000,
    "y": null,
  },
  Object {
    "x": 1607437480000,
    "y": null,
  },
  Object {
    "x": 1607437490000,
    "y": null,
  },
  Object {
    "x": 1607437500000,
    "y": null,
  },
  Object {
    "x": 1607437510000,
    "y": null,
  },
  Object {
    "x": 1607437520000,
    "y": 0.5,
  },
  Object {
    "x": 1607437530000,
    "y": 0.2,
  },
  Object {
    "x": 1607437540000,
    "y": 0,
  },
  Object {
    "x": 1607437550000,
    "y": null,
  },
  Object {
    "x": 1607437560000,
    "y": null,
  },
  Object {
    "x": 1607437570000,
    "y": null,
  },
  Object {
    "x": 1607437580000,
    "y": null,
  },
  Object {
    "x": 1607437590000,
    "y": null,
  },
  Object {
    "x": 1607437600000,
    "y": null,
  },
  Object {
    "x": 1607437610000,
    "y": null,
  },
  Object {
    "x": 1607437620000,
    "y": null,
  },
  Object {
    "x": 1607437630000,
    "y": null,
  },
  Object {
    "x": 1607437640000,
    "y": null,
  },
  Object {
    "x": 1607437650000,
    "y": 1,
  },
  Object {
    "x": 1607437660000,
    "y": 0,
  },
  Object {
    "x": 1607437670000,
    "y": null,
  },
]
`;
